2 files modified, 2 added, 3 deleted

--- a/src/index.css
+++ b/src/index.css
@@ -129,3 +129,15 @@ body {
 .h4 {
     @apply text-sm;
 }
+
+.h3 {
+    @apply text-base;
+}
+
+.h2 {
+    @apply text-lg;
+}
+
+.h1 {
+    @apply text-xl;
+}
