--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,7 +1,9 @@
+@import url('https://rsms.me/inter/inter.css');
+
 @font-face {
-    font-family: 'Inter var';
+    font-family: 'Newake';
     font-weight: 100 900;
     font-display: swap;
     font-style: normal;
-    src: url('./assets/fonts/Inter.var.woff2') format('woff2');
+    src: url('./assets/fonts/Newake-Font-Demo.otf');
 }
