--- a/src/fonts.css
+++ b/src/fonts.css
@@ -1,9 +1,6 @@
 @import url('https://rsms.me/inter/inter.css');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,slnt,wdth,wght@8..144,-10,151,1000;8..144,0,100,100;8..144,0,100,200;8..144,0,100,300;8..144,0,100,400;8..144,0,100,500;8..144,0,100,600;8..144,0,100,700;8..144,0,100,800;8..144,0,100,900;8..144,0,100,1000&display=swap');
 
-@font-face {
-    font-family: 'Newake';
-    font-weight: 100 900;
-    font-display: swap;
-    font-style: normal;
-    src: url('./assets/fonts/Newake-Font-Demo.otf');
+.ital {
+    font-variation-settings: 'slnt' -12;
 }
